# CiteGuard

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
RnR/: citeguard_backend_guidelines.md  citeguard_frontend_guidelines.md  citeguard_pm_rules.md  citeguard_project_management_rules.md  citeguard_qa_rules.md
adr/: 0001-tech-stack.md  0002-database-schema.md  0003-audit-log-hash-chain.md  0004-tenant-isolation.md  0005-evaluator-architecture.md  0006-authentication.md  0007-privileged-data-handling.md  0008-external-api-integration.md  0009-ci-cd-pipeline.md
arc_diagrams/backend/: audit-log-chain.mmd  auth-flow.mmd  data-model.mmd  evaluator-pipeline.mmd  system-overview.mmd
arc_diagrams/frontend/: app-routes.mmd  state-management.mmd
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/.github/workflows/: backend.yml
backend/app/: config.py  main.py
backend/app/alerts/: service.py
backend/app/audit/: exporter.py  router.py  service.py
backend/app/common/: dependencies.py  exceptions.py  middleware.py  pagination.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py
backend/app/documents/: repository.py  router.py  schemas.py  service.py
backend/app/evaluators/: base.py  bluebook_format.py  citation_existence.py  judge_verification.py  orchestrator.py  quote_verification.py  temporal_validity.py
backend/app/firms/: router.py  schemas.py
backend/app/flags/: repository.py  router.py  schemas.py  service.py
backend/app/integrations/courtlistener/: client.py  schemas.py
backend/app/integrations/fjc/: models.py  service.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  document.py  enums.py  export.py  firm.py  flag.py  reviewer_action.py  user.py
backend/app/workers/: arq_app.py
backend/app/workers/tasks/: evaluator_run.py
backend/tests/: conftest.py
docs/: PRD_v1.md  PRD_v2.md  Spec_doc.md  phase1-v1-implementation.md  phase2-v1.1-v1.2-implementation.md  phase3-v2-implementation.md
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: env.ts
template/: adr-template.md  feature-template.md  qa-template.md  task-template.md
(+12 files in other folders)
