[project]
name = "citeguard-backend"
version = "0.1.0"
description = "CiteGuard — AI verification and audit platform for U.S. law firms"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Redis / Workers
    "arq>=0.26.0",
    "redis>=5.2.0",
    # Auth
    "pyjwt[crypto]>=2.10.0",
    "httpx>=0.28.0",
    "bcrypt>=4.2.0",
    # Evaluators (Sprint 2+)
    "eyecite>=2.7.0",
    "rapidfuzz>=3.10.0",
    # PDF Export (Sprint 4)
    "weasyprint>=63.0",
    # Observability
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.19.0",
    # Payments
    "stripe>=11.3.0",
    # Utilities
    "python-ulid>=3.0.0",
    "orjson>=3.10.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print statements)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "tenant_isolation: marks tests as tenant isolation tests",
    "corpus: marks tests as evaluator corpus regression tests",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "pass",
]
